{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 353,
  "lineage": "635c1d60-f7f5-ba96-c235-5f0e5a05f26a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:627733612952:loadbalancer/app/webserver-dev-alb/1a3a99cbd49f7ad3",
            "arn_suffix": "app/webserver-dev-alb/1a3a99cbd49f7ad3",
            "desync_mitigation_mode": "defensive",
            "dns_name": "webserver-dev-alb-999467491.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:627733612952:loadbalancer/app/webserver-dev-alb/1a3a99cbd49f7ad3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "webserver-dev-alb",
            "security_groups": [
              "sg-0a8ca0e3f58745a94"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02003e9b7302c5f58"
              },
              {
                "subnet_id": "subnet-0f4b12c10461ea69e"
              }
            ],
            "subnets": [
              "subnet-02003e9b7302c5f58",
              "subnet-0f4b12c10461ea69e"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "webserver-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "webserver-alb"
            },
            "vpc_id": "vpc-02e9000e2714b37b8",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.load_balancer_security_group",
            "aws_subnet.public",
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aws-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:627733612952:internet-gateway/igw-02d70637962b1ea7e",
            "id": "igw-02d70637962b1ea7e",
            "owner_id": "627733612952",
            "tags": {
              "Environment": "dev",
              "Name": "dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-02e9000e2714b37b8"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:627733612952:listener/app/webserver-dev-alb/1a3a99cbd49f7ad3/fdf952cb7136ce0c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:627733612952:targetgroup/webserver-dev-tg/2c2b89f1e359c134",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:627733612952:listener/app/webserver-dev-alb/1a3a99cbd49f7ad3/fdf952cb7136ce0c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:627733612952:loadbalancer/app/webserver-dev-alb/1a3a99cbd49f7ad3",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.application_load_balancer",
            "aws_lb_target_group.target_group",
            "aws_security_group.load_balancer_security_group",
            "aws_subnet.public",
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:627733612952:targetgroup/webserver-dev-tg/2c2b89f1e359c134",
            "arn_suffix": "targetgroup/webserver-dev-tg/2c2b89f1e359c134",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 300,
                "matcher": "200",
                "path": "/v1/status",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:627733612952:targetgroup/webserver-dev-tg/2c2b89f1e359c134",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "webserver-dev-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "webserver-lb-tg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "webserver-lb-tg"
            },
            "target_type": "ip",
            "vpc_id": "vpc-02e9000e2714b37b8"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02d70637962b1ea7e",
            "id": "r-rtb-0e2734ec6140cb0a21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e2734ec6140cb0a2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.aws-igw",
            "aws_route_table.public",
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:627733612952:route-table/rtb-0e2734ec6140cb0a2",
            "id": "rtb-0e2734ec6140cb0a2",
            "owner_id": "627733612952",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "dev-routing-table-public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-routing-table-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-02e9000e2714b37b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f40de9287bd818af",
            "route_table_id": "rtb-0e2734ec6140cb0a2",
            "subnet_id": "subnet-0f4b12c10461ea69e"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.aws-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae79a6bad36fa8ec",
            "route_table_id": "rtb-0e2734ec6140cb0a2",
            "subnet_id": "subnet-02003e9b7302c5f58"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:627733612952:security-group/sg-0a8ca0e3f58745a94",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a8ca0e3f58745a94",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20220526123405961000000002",
            "name_prefix": "terraform-",
            "owner_id": "627733612952",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "webserver-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "webserver-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02e9000e2714b37b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:627733612952:security-group/sg-0721179c40eb46d76",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0721179c40eb46d76",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0a8ca0e3f58745a94"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20220526123410702700000003",
            "name_prefix": "terraform-",
            "owner_id": "627733612952",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "webserver-service-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "webserver-service-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02e9000e2714b37b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer_security_group",
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:627733612952:subnet/subnet-0ef67e37147dc2e5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef67e37147dc2e5c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "627733612952",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-private-subnet-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-private-subnet-1"
            },
            "vpc_id": "vpc-02e9000e2714b37b8"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:627733612952:subnet/subnet-0c771895b9e1447df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c771895b9e1447df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "627733612952",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-private-subnet-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-private-subnet-2"
            },
            "vpc_id": "vpc-02e9000e2714b37b8"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:627733612952:subnet/subnet-0f4b12c10461ea69e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4b12c10461ea69e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "627733612952",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-subnet-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-subnet-1"
            },
            "vpc_id": "vpc-02e9000e2714b37b8"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:627733612952:subnet/subnet-02003e9b7302c5f58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02003e9b7302c5f58",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "627733612952",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-subnet-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-subnet-2"
            },
            "vpc_id": "vpc-02e9000e2714b37b8"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:627733612952:vpc/vpc-02e9000e2714b37b8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0390f0461e21b69f6",
            "default_route_table_id": "rtb-0027f8af114f3c3e9",
            "default_security_group_id": "sg-00b6f79c539e34484",
            "dhcp_options_id": "dopt-03615c4e5a543adbc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02e9000e2714b37b8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0027f8af114f3c3e9",
            "owner_id": "627733612952",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}